force-app/main/default/objects/GYNCO_Product_Review__c/GYNCO_Product_Review__c.object-meta.xml
<CustomObject>
    <label>Product Review</label>
    <nameField>
        <displayFormat>PRN - {000000}</displayFormat>
        <label>Product Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>