force-app/main/default/objects/GYNCO_Product_Review__c/fields/GYNCF_Product__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>