force-app/main/default/objects/GYNCO_Product_Review__c/fields/GYNCF_Rating__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Rating__c</fullName>
    <label>Rating</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>