force-app/main/default/objects/GYNCO_Product_Review__c/fields/GYNCF_Review_Description__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Review_Description__c</fullName>
    <label>Review Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>