force-app/main/default/objects/GYNCO_Product_Review__c/fields/GYNCF_Review_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Review_Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>